--- a/index.html
+++ b/index.html
@@ -2,42 +2,47 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-    <head>
-    	<title>Polytechnic School Computer Science Club</title>
-    	<meta name="resource-type" content="document" />
-    	<meta name="author" content="" />
-    	<meta name="description" content="" />
-    	<meta name="keywords" content="" />
-    	<meta name="distribution" content="global" />
-    	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-    	<header>
-    		<div class="container">
-    		    <h1>Poly CS Club</h1>
-            </div><!--container-->
-    	</header>
-        <nav> 
-    		<div class="container">
-            <ol>
-                <li><a href="#">Nav 1</a></li>
-                <li><a href="#">Nav 2</a></li>
-                <li><a href="#">Nav 3</a></li>
-            </ol>
-            </div>
-        </nav>
-		<main>
-            <div class="container">
-                <h1>Content</h1>
-                <p>This would be the content?</p>
-    		</div> <!--container -->
-        </main>
-		<footer>
-    		<div class="container">
-			    <p>&copy;2021</p>
-			</div>
-		</footer>
-    </body>
+<head>
+	<title>Polytechnic School Computer Science Club</title>
+	<meta name="resource-type" content="document" />
+	<meta name="author" content="" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta name="distribution" content="global" />
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+	<header>
+		<div class="container">
+			<h1>Poly CS Club</h1>
+		</div>
+		<!--container-->
+	</header>
+	<nav>
+		<div class="container">
+			<ol>
+				<li>About Us</li>
+				<li>Projects</li>
+				<li>Projects</li>
+				<li>Blog</li>
+			</ol>
+		</div>
+	</nav>
+	<main>
+		<div class="container">
+			<h1>Content</h1>
+			<p>This would be the content?</p>
+		</div>
+		<!--container -->
+	</main>
+	<footer>
+		<div class="container">
+			<p>&copy;2021</p>
+		</div>
+	</footer>
+</body>
+
 </html>
