--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 			<ol>
 				<li>About Us</li>
 				<li>Projects</li>
-				<li>Projects</li>
-				<li>Blog</li>
+				<li>Blog</li> <!-- Testing!! -->
 			</ol>
 		</div>
 	</nav>
