added scss features

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="distribution" content="global" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="scss/styles.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 			<ol>
 				<li>About Us</li>
 				<li>Projects</li>
-				<li>Blog</li> <!-- Testing!! -->
+				<li>Blog</li> <!-- Testing!! mv style.css css-->
 			</ol>
 		</div>
 	</nav>
